Cherry-pick 309309@main (0816379351c3). https://bugs.webkit.org/show_bug.cgi?id=309980

[GStreamer] clang-22 unsafe-buffer-usage-in-unique-ptr-array-access warnings
    https://bugs.webkit.org/show_bug.cgi?id=309980

    Reviewed by Xabier Rodriguez-Calvar.

    Store the FFT complex numbers in a Vector instead of a std::unique_ptr.

    * Source/WebCore/platform/audio/FFTFrame.h:
    * Source/WebCore/platform/audio/gstreamer/FFTFrameGStreamer.cpp:
    (WebCore::FFTFrame::FFTFrame):
    (WebCore::FFTFrame::doFFT):
    (WebCore::FFTFrame::doInverseFFT):

    Canonical link: https://commits.webkit.org/309309@main

Canonical link: https://commits.webkit.org/305877.679@webkitglib/2.52