Source/WebCore/platform/audio/gstreamer/FFTFrameGStreamer.cpp
@@ -45,7 +45,7 @@ namespace WebCore {
 FFTFrame::FFTFrame(unsigned fftSize)
     : m_FFTSize(fftSize)
     , m_log2FFTSize(static_cast<unsigned>(log2(fftSize)))
-    , m_complexData(makeUniqueArray<GstFFTF32Complex>(unpackedFFTDataSize(m_FFTSize)))
+    , m_complexData(unpackedFFTDataSize(m_FFTSize))
     , m_realData(unpackedFFTDataSize(m_FFTSize))
     , m_imagData(unpackedFFTDataSize(m_FFTSize))
 {
@@ -68,7 +68,7 @@ FFTFrame::FFTFrame()
 FFTFrame::FFTFrame(const FFTFrame& frame)
     : m_FFTSize(frame.m_FFTSize)
     , m_log2FFTSize(frame.m_log2FFTSize)
-    , m_complexData(makeUniqueArray<GstFFTF32Complex>(unpackedFFTDataSize(m_FFTSize)))
+    , m_complexData(unpackedFFTDataSize(m_FFTSize))
     , m_realData(unpackedFFTDataSize(frame.m_FFTSize))
     , m_imagData(unpackedFFTDataSize(frame.m_FFTSize))
 {
@@ -89,7 +89,7 @@ FFTFrame::~FFTFrame() = default;
 
 void FFTFrame::doFFT(std::span<const float> data)
 {
-    gst_fft_f32_fft(m_fft.get(), data.data(), m_complexData.get());
+    gst_fft_f32_fft(m_fft.get(), data.data(), m_complexData.mutableSpan().data());
 
     auto imagData = m_imagData.span();
     auto realData = m_realData.span();
@@ -109,7 +109,7 @@ void FFTFrame::doInverseFFT(std::span<float> data)
         m_complexData[i].r = realData[i];
     }
 
-    gst_fft_f32_inverse_fft(m_inverseFft.get(), m_complexData.get(), data.data());
+    gst_fft_f32_inverse_fft(m_inverseFft.get(), m_complexData.mutableSpan().data(), data.data());
 
     // Scale so that a forward then inverse FFT yields exactly the original data.
     VectorMath::multiplyByScalar(data.first(m_FFTSize), 1.0 / m_FFTSize, data);
